<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A7CA5"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/bmi_calculate"
        android:textColor="#D9DCD6"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittextrounded"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="textPersonName|numberDecimal"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColorHint="#16425B"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextrounded"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="textPersonName|numberDecimal"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColorHint="#16425B"
        tools:ignore="TextFields" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/bmi"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D9DCD6"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:text="@string/calculate"
        android:textColor="#16425B"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>